Mini Projects works on mobile, force footer to bottom, fixed some meta data

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
 .App {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   background-color: #294F70;
   min-height: 100vh;
   min-width: 100vw;
   font-size: 1.25rem;
+}
+
+.content {
+  flex: 1
 }
 
 #root {
@@ -68,7 +74,7 @@
 
 .footer-bar {
   font-size: 1.1rem;
-  margin-top: 3rem;
+  margin-top: auto;
   color: var(--text-color);
   background-color: var(--background-color);
 }
